--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="page">
-    <h1>Comission</h1>
+    <h1>Fake Comission</h1>
 <table>
     <tr>
         <th>Quota</th>
